return old TextOverflow Component for Wall and fix some problems

--- a/src/Components/Main/OtherPages/LabLib/LabLibStoryPage/LabLibStoryPage.css
+++ b/src/Components/Main/OtherPages/LabLib/LabLibStoryPage/LabLibStoryPage.css
@@ -301,7 +301,6 @@
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        gap: unset;
     }
     .story_info_right {
         max-width: 100%;
